[package]
name = "batch_reporter_rs"
version = "0.1.0"
authors = ["Maarten <maartendeschrijver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.13"
dotenv = "0.15.0"
envy = "0.4"
cli-table = "0.4"
